; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/server/extr_sv_game.c_SV_ShutdownGameProgs.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/server/extr_sv_game.c_SV_ShutdownGameProgs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gvm = common dso_local global i32* null, align 8
@GAME_SHUTDOWN = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SV_ShutdownGameProgs() #0 {
  %1 = load i32*, i32** @gvm, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %11

4:                                                ; preds = %0
  %5 = load i32*, i32** @gvm, align 8
  %6 = load i32, i32* @GAME_SHUTDOWN, align 4
  %7 = load i32, i32* @qfalse, align 4
  %8 = call i32 @VM_Call(i32* %5, i32 %6, i32 %7)
  %9 = load i32*, i32** @gvm, align 8
  %10 = call i32 @VM_Free(i32* %9)
  store i32* null, i32** @gvm, align 8
  br label %11

11:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @VM_Call(i32*, i32, i32) #1

declare dso_local i32 @VM_Free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
